# write-yourself-a-cli

./: Cargo.toml  PROFILING.md  README.md
examples/: block1.rs  block2.rs  block3.rs  block4.rs  block5.rs  block6.rs  block6_jwalk.rs
src/: main.rs
