[package]
name = "ff"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.11.1"

[lints.clippy]
all = "warn"
pedantic = "warn"
missing_const_for_fn = "warn"

[lints.rust]
absolute_paths_not_starting_with_crate = "warn"
anonymous_parameters = "deny"
macro_use_extern_crate = "deny"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
invalid_html_tags = "warn"
semicolon_in_expressions_from_macros = "warn"
unreachable_pub = "warn"
unused_extern_crates = "warn"
variant_size_differences = "warn"
# TODO: Enable the check for missing documentation in the future
#missing_docs = "deny"
